Falta solucionar problema de guardado del contacto, en los perfiles privados

--- a/src/app/pages/winks/item-wink/item-wink.component.html
+++ b/src/app/pages/winks/item-wink/item-wink.component.html
@@ -1,5 +1,5 @@
 <ion-item>
-  <ion-avatar slot="start" class="avatar-wink" [routerLink]="[urlPublic, wink.user._id, 1]">
+  <ion-avatar slot="start" class="avatar-wink" [routerLink]="[urlPublic, wink._id, 1]">
     <ion-img [src]="wink && wink.user ? wink.user.avatarUrl : avatar"></ion-img>
   </ion-avatar>
   <ion-label>
