--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -6,7 +6,14 @@
       class="icono-arrow" 
       [routerLink]="[urlPublic, userWink._id, origin]"></fa-icon>
     <ion-title>Private Profiles</ion-title>
-    <ion-icon slot="end" name="save" class="icon-bar" color="medium" (click)="presentAlertCheckbox()"></ion-icon>
+    <ion-icon 
+      slot="end" 
+      name="save" 
+      class="icon-bar" 
+      *ngIf="generalItems.length > 0 || professionalItems.length > 0  || personalItems.length > 0" 
+      color="medium" 
+      (click)="Confirm()">
+    </ion-icon>
   </ion-toolbar>
 </ion-header>
 
@@ -29,7 +36,6 @@
     <item-list 
       *ngFor="let item of section"
       [item]="item.item">
-
     </item-list>
   </ion-list>
 </ion-content>
