--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -21,6 +21,7 @@
     <div class="contenedorAvatar" >
       <ion-avatar (click)="SeleccionarImagen()" class="avatar-profile"> 
         <ion-img  
+          class="img-avatar"
           *ngIf="!loadingAvatar" 
           alt="Avatar" 
           (ionError)="ErrorImagen()" 
