--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -6,7 +6,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item (click)="IrDatosBasicos()">
+      <ion-item (click)="GoBasicData()">
         <ion-icon name="person" slot="start"></ion-icon>
         <ion-label>Datos Basicos</ion-label>
       </ion-item>
@@ -34,89 +34,151 @@
  
     </ion-toolbar>
   </ion-header>
-  <div *ngIf="loading" class="spinner">
-    <spinner></spinner>
-  </div>
-
-  <ion-content class="ion-padding" *ngIf="!loading" [scrollEvents]="true" (ionScroll)="Scroll($event)"> 
+  <ion-content class="ion-padding" > 
       
-    <div class="contenedorAvatar" >
-      <ion-avatar class="avatar-profile"> 
-        <ion-img [src]="user ? user.avatarUrl : avatar"></ion-img>
-      </ion-avatar>
-    </div>
-
-    <div class="contenedor" >
-      <ion-title class="title-name">
-        {{user ? user.firstName + ' ' + user.lastName : 'John Doe'}}
-      </ion-title>
-    </div>
-    
-    <form [formGroup]="grupoForm"  (ngSubmit)="onSubmit()">
-    
-        
-    <ion-list >
+    <div *ngIf="loading">
+      <div class="contenedorAvatar" >
+        <ion-avatar class="avatar-profile"> 
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-avatar>
+      </div>
+      <div class="content-center" >
+          <ion-skeleton-text animated style="width: 30%; height: 30px;"></ion-skeleton-text>
+      </div>
       <ion-item>
-        <fa-icon 
-        [icon]="['fas', 'book-open'] "
-        class="icono"
-        slot="start"></fa-icon>
-        <ion-label position="floating">Biografia</ion-label>
-        <ion-textarea maxlength="250"
-        formControlName="biografia"
-        (ionInput)="ChangeData()"
-        ></ion-textarea>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+            <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 80%; height: 50px;"></ion-skeleton-text>
+        </ion-label>
       </ion-item>
-      <mat-accordion multi="true" cdkDropListGroup>
-        <mat-expansion-panel #pp 
-        cdkDropList
-          [cdkDropListData]="publicoForm"
-          (cdkDropListDropped)="MoverItem($event)"
-          (cdkDropListEntered)="AbrirPanel(pp)"
-          (cdkDropListExited)="CerrarPanel(pp)"
-          formArrayName="0"
-          >
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Publico
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <div
-            
-            class="acordion width-100"
-            *ngFor="let itemPublico of publicoForm.controls; let i = index"
-            [formGroupName]="i"
-            cdkDrag 
-            [cdkDragDisabled]="ordenar"
-            [ngClass]="{'ordenar': !ordenar}"
-            (cdkDragStarted)="Drag()"
-            (cdkDragEnded)="Drop()">
-              <app-item-perfil  
-                [form]="itemPublico"
+        <ion-label>
+            <ion-skeleton-text animated style="width: 100%; height: 45px;"></ion-skeleton-text>
+        </ion-label>
+        <ion-label>
+            <ion-skeleton-text animated style="width: 100%; height: 45px;"></ion-skeleton-text>
+        </ion-label>
+        <ion-label>
+            <ion-skeleton-text animated style="width: 100%; height: 45px;"></ion-skeleton-text>
+        </ion-label>
+        <ion-label>
+            <ion-skeleton-text animated style="width: 100%; height: 45px;"></ion-skeleton-text>
+        </ion-label>
+    </div>
+    <div *ngIf="!loading">
+      <div class="contenedorAvatar" >
+        <ion-avatar class="avatar-profile"> 
+          <ion-img [src]="user ? user.avatarUrl : avatar" class="img-avatar"></ion-img>
+        </ion-avatar>
+      </div>
+
+      <div>
+        <ion-title class="title-name">
+          {{user ? user.firstName + ' ' + user.lastName : 'John Doe'}}
+        </ion-title>
+      </div>
+    
+      <form [formGroup]="grupoForm"  (ngSubmit)="onSubmit()">
+      
+          
+      <ion-list >
+        <ion-item>
+          <fa-icon 
+          [icon]="['fas', 'book-open'] "
+          class="icono"
+          slot="start"></fa-icon>
+          <ion-label position="floating" class="pad-let-10">Biografia</ion-label>
+          <ion-textarea maxlength="250"
+          formControlName="biografia"
+          (ionInput)="ChangeData()"
+          ></ion-textarea>
+        </ion-item>
+        <mat-accordion multi="true" cdkDropListGroup>
+          <mat-expansion-panel #pp 
+          cdkDropList
+            [cdkDropListData]="publicoForm"
+            (cdkDropListDropped)="MoverItem($event)"
+            (cdkDropListEntered)="AbrirPanel(pp)"
+            (cdkDropListExited)="CerrarPanel(pp)"
+            formArrayName="0"
+            >
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Publico
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div
+              
+              class="acordion width-100"
+              *ngFor="let itemPublico of publicoForm.controls; let i = index"
+              [formGroupName]="i"
+              cdkDrag 
+              [cdkDragDisabled]="ordenar"
+              [ngClass]="{'ordenar': !ordenar}"
+              (cdkDragStarted)="Drag()"
+              (cdkDragEnded)="Drop()">
+                <app-item-perfil  
+                  [form]="itemPublico"
+                  formControlName="item"
+                  [ordenando]="ordenar" 
+                  (delete)="EliminarElemento(publicoForm, i)"
+                  (change)="ChangeData()"
+                  >
+                </app-item-perfil>
+            </div>
+          </mat-expansion-panel>
+          <mat-expansion-panel  #pg  
+          cdkDropList
+            [cdkDropListData]="generalForm"
+            (cdkDropListDropped)="MoverItem($event)"
+            (cdkDropListEntered)="AbrirPanel(pg)"
+            (cdkDropListExited)="CerrarPanel(pg)"
+            formArrayName="1"
+            >
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                General
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+              <div 
+              class="acordion width-100"
+              *ngFor="let itemGeneral of generalForm.controls; let i = index"
+              [formGroupName]="i"
+              cdkDrag 
+              [cdkDragDisabled]="ordenar"
+              [ngClass]="{'ordenar': !ordenar}"
+              (cdkDragStarted)="Drag()"
+              (cdkDragEnded)="Drop()"
+              >
+                <app-item-perfil  
+                [form]="itemGeneral"
                 formControlName="item"
                 [ordenando]="ordenar" 
-                (delete)="EliminarElemento(publicoForm, i)"
+                (delete)="EliminarElemento(generalForm, i)"
                 (change)="ChangeData()"
                 >
-              </app-item-perfil>
-          </div>
-        </mat-expansion-panel>
-        <mat-expansion-panel  #pg  
-        cdkDropList
-          [cdkDropListData]="generalForm"
-          (cdkDropListDropped)="MoverItem($event)"
-          (cdkDropListEntered)="AbrirPanel(pg)"
-          (cdkDropListExited)="CerrarPanel(pg)"
-          formArrayName="1"
+                </app-item-perfil>
+              </div>
+          </mat-expansion-panel>
+          
+          <mat-expansion-panel  #pper  
+            cdkDropList
+            [cdkDropListData]="personalForm"
+            (cdkDropListEntered)="AbrirPanel(pper)"
+            (cdkDropListDropped)="MoverItem($event)"
+            (cdkDropListExited)="CerrarPanel(pper)"
+            formArrayName="2"
           >
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              General
-            </mat-panel-title>
-          </mat-expansion-panel-header>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Personal
+              </mat-panel-title>
+            </mat-expansion-panel-header>
             <div 
             class="acordion width-100"
-            *ngFor="let itemGeneral of generalForm.controls; let i = index"
+            *ngFor="let itemPersonal of personalForm.controls; let i = index"
             [formGroupName]="i"
             cdkDrag 
             [cdkDragDisabled]="ordenar"
@@ -124,96 +186,67 @@
             (cdkDragStarted)="Drag()"
             (cdkDragEnded)="Drop()"
             >
-              <app-item-perfil  
-              [form]="itemGeneral"
+              <app-item-perfil 
+              [form]="itemPersonal"
               formControlName="item"
               [ordenando]="ordenar" 
-              (delete)="EliminarElemento(generalForm, i)"
+              (delete)="EliminarElemento(personalForm, i)"
               (change)="ChangeData()"
               >
               </app-item-perfil>
             </div>
-        </mat-expansion-panel>
-        
-        <mat-expansion-panel  #pper  
-          cdkDropList
-          [cdkDropListData]="personalForm"
-          (cdkDropListEntered)="AbrirPanel(pper)"
-          (cdkDropListDropped)="MoverItem($event)"
-          (cdkDropListExited)="CerrarPanel(pper)"
-          formArrayName="2"
-        >
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Personal
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <div 
-          class="acordion width-100"
-          *ngFor="let itemPersonal of personalForm.controls; let i = index"
-          [formGroupName]="i"
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
-          [ngClass]="{'ordenar': !ordenar}"
-          (cdkDragStarted)="Drag()"
-          (cdkDragEnded)="Drop()"
+          </mat-expansion-panel>
+          
+          <mat-expansion-panel  #ppro  
+            cdkDropList
+            [cdkDropListData]="profesionalForm"
+            (cdkDropListEntered)="AbrirPanel(ppro)"
+            (cdkDropListDropped)="MoverItem($event)"
+            (cdkDropListExited)="CerrarPanel(ppro)"
+            formArrayName="3"
           >
-            <app-item-perfil 
-            [form]="itemPersonal"
-            formControlName="item"
-            [ordenando]="ordenar" 
-            (delete)="EliminarElemento(personalForm, i)"
-            (change)="ChangeData()"
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Profesional
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div 
+            class="acordion width-100"
+            *ngFor="let itemProfesional of profesionalForm.controls; let i = index"
+            [formGroupName]="i"
+            cdkDrag 
+            [cdkDragDisabled]="ordenar"
+            [ngClass]="{'ordenar': !ordenar}"
+            (cdkDragStarted)="Drag()"
+            (cdkDragEnded)="Drop()"
             >
-            </app-item-perfil>
-          </div>
-        </mat-expansion-panel>
-        
-        <mat-expansion-panel  #ppro  
-          cdkDropList
-          [cdkDropListData]="profesionalForm"
-          (cdkDropListEntered)="AbrirPanel(ppro)"
-          (cdkDropListDropped)="MoverItem($event)"
-          (cdkDropListExited)="CerrarPanel(ppro)"
-          formArrayName="3"
-        >
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Profesional
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <div 
-          class="acordion width-100"
-          *ngFor="let itemProfesional of profesionalForm.controls; let i = index"
-          [formGroupName]="i"
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
-          [ngClass]="{'ordenar': !ordenar}"
-          (cdkDragStarted)="Drag()"
-          (cdkDragEnded)="Drop()"
-          >
-            <app-item-perfil 
-            [form]="itemProfesional"
-            formControlName="item"
-            [ordenando]="ordenar" 
-            (delete)="EliminarElemento(profesionalForm, i)"
-            (change)="ChangeData()"
-            >
-            </app-item-perfil>
-          </div>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </ion-list>
-    </form>
-    
+              <app-item-perfil 
+              [form]="itemProfesional"
+              formControlName="item"
+              [ordenando]="ordenar" 
+              (delete)="EliminarElemento(profesionalForm, i)"
+              (change)="ChangeData()"
+              >
+              </app-item-perfil>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </ion-list>
+      </form>
+    </div>
     
     <ion-fab vertical="bottom" horizontal="end" slot="fixed"  *ngIf="!isDrag" >
+      <div *ngIf="!loading">
         <ion-fab-button *ngIf="FormValid()" size="small" color="success" (click)="onSubmit()">
           <ion-icon name="save"></ion-icon>
         </ion-fab-button>
         <ion-fab-button size="small" (click)="SeleccionSeccion()">
           <ion-icon name="add"></ion-icon>
         </ion-fab-button>
+      </div>
+      <ion-avatar *ngIf="loading" class="button-float-skeleton"> 
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
       
     </ion-fab>
 
