Update geo, ripple

--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -28,7 +28,7 @@
       <fa-icon 
         slot="end" *ngIf="!loading"
         [icon]="[ordenar ? 'far' : 'fas',  'list-alt']"
-        class="icon-bar color-medium"
+        class="icon-bar ripple-toolbar-mie color-medium"
         (click)="Ordenar()"></fa-icon>
        
  
