--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -151,6 +151,6 @@
       </ion-item>
     </ion-list>
     <ion-button expand="block" type="submit" [disabled]="FormValid()">Save</ion-button>
-    <ion-button expand="block" color="light" (click)="user.emptyProfile ? Logout() : Cancel()">Cancel</ion-button>
+    <ion-button expand="block" color="light" (click)="user.emptyProfile ? Logout() : Back()">Cancel</ion-button>
   </form>
 </ion-content>
