--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -1,18 +1,23 @@
 <ion-header>
   <ion-toolbar>
+    <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mis" slot="start" >
       <fa-icon 
-      slot="start" 
-      [icon]="['fas', 'arrow-left']" 
-      class="icono-arrow" 
-      (click)="Behind()"></fa-icon>
+        [icon]="['fas', 'arrow-left']" 
+        class="icono-arrow"
+        (click)="Back()"
+      ></fa-icon>
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
     <ion-title>Private Profiles</ion-title>
-    <ion-icon 
-      slot="end" 
-      name="save" 
-      class="icon-bar" 
-      color="medium" 
-      (click)="Confirm()">
-    </ion-icon>
+    <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
+      <fa-icon 
+        [icon]="['far', 'save']" 
+        class="icono-arrow"
+        (click)="Confirm()"
+      ></fa-icon>
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    
   </ion-toolbar>
 </ion-header>
 
