Inicio de notificaciones

--- a/src/app/pages/config-perfil/item-perfil/item-perfil.component.html
+++ b/src/app/pages/config-perfil/item-perfil/item-perfil.component.html
@@ -146,6 +146,6 @@
     </ion-select-option>
   </ion-select>
 </ion-item>
-<ion-text *ngIf="errorMessage" color="danger" class="form-error">
-  {{errorMessage}}
+<ion-text color="danger">
+  {{ErrorMessage()}}
 </ion-text>
