--- a/src/app/pages/home/card/card.component.html
+++ b/src/app/pages/home/card/card.component.html
@@ -1,4 +1,6 @@
-<ion-card class="contenedor-card card-list dimension ion-activatable ion-activatable-up">
+<ion-card 
+  class="contenedor-card card-list dimension ion-activatable ion-activatable-up" 
+  [ngClass]="{newWink: user.newWink}">
   <div class="status-card">
     <p 
       class="text-card text-status" >
