--- a/src/app/pages/winks/item-wink/item-wink.component.scss
+++ b/src/app/pages/winks/item-wink/item-wink.component.scss
@@ -26,3 +26,15 @@
   margin-inline-start: 5px;
 }
 
+.label-item {
+  width: auto; 
+  margin-inline-start: 3%;
+}
+
+.item-win-badge {
+  margin: 0%;
+  padding: 0%;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
