--- a/src/global.scss
+++ b/src/global.scss
@@ -235,3 +235,12 @@
 .ripple-toolbar-mie {
   margin-inline-end: 3%;
 }
+
+.icon-item-list {
+  width: 35px;
+  text-align: center;
+}
+
+.newWink {
+  border: 2px #3880ff solid;
+}
