--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -8,11 +8,11 @@
     <ion-list>
       <ion-item (click)="GoBasicData()">
         <ion-icon name="person" slot="start"></ion-icon>
-        <ion-label>Datos Basicos</ion-label>
+        <ion-label>Basic data</ion-label>
       </ion-item>
       <ion-item (click)="Logout()">
         <ion-icon name="exit" slot="start"></ion-icon>
-        <ion-label>Salir</ion-label>
+        <ion-label>Logout</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
