--- a/src/app/tools/components/item-list/item-list.component.html
+++ b/src/app/tools/components/item-list/item-list.component.html
@@ -1,43 +1,36 @@
-<ion-item 
-  *ngIf="item && itemType" 
-  (click)="OpenLink()"  
-  class="item-has-value item-interactive item-input item-label-floating">
+<ion-item
+  (click)="OpenLink()"
+  class="ion-activatable ion-activatable-up">
   <!--Icono del item-->
-  <fa-icon 
-  *ngIf="item"
-  [icon]="[preIcono, icon]"  
-  class="icono"
-  slot="start" ></fa-icon>
-
-  <!--Titulo del item-->
-  <ion-label 
-  position="floating" 
-  class="padding-left-10" 
-  *ngIf="item">
-    {{itemType? itemType.description : ''}}
-  </ion-label>
-  
-  <mat-chip-list
-    *ngIf="itemType && itemType.index === indexChip" 
-    class="chip-item chip-margin"
-    >
-    <ion-chip outline color="primary"
-    *ngFor="let chip of chips">
-    {{chip}}
-    </ion-chip>
+  <div class="icon-item-list">
+    <fa-icon 
+    *ngIf="item"
+    [icon]="[preIcono, icon]"  
+    class="icono"></fa-icon>
+  </div>
+  <ion-label class="label-item">
+    <div>
+          <ion-label class="padding-left-10 font-size-12" >
+            {{itemType? itemType.description : 'Title'}}
+          </ion-label>
+      <div >
+        <mat-chip-list
+          *ngIf="itemType && itemType.index === indexChip" 
+          class="chip-item chip-margin"
+          >
+          <ion-chip outline color="primary"
+          *ngFor="let chip of chips">
+          {{chip}}
+          </ion-chip>
+          
+        </mat-chip-list>
     
-  </mat-chip-list>
-
-  <ion-text *ngIf="itemType &&  itemType.index !== indexChip "
-    class="text-margin">
-    {{item? item.value : ''}}
-  </ion-text>
-<!--
-  <ion-textarea
-    *ngIf="itemType &&  itemType.index === indexBiogarfia"
-    style="margin-left: 2%;" 
-    [value]="item? item.value : ''" readonly>
-
-  </ion-textarea>
--->
+        <ion-text *ngIf="itemType &&  itemType.index !== indexChip "
+          class="text-margin">
+          {{item? item.value : ''}}
+        </ion-text>
+      </div>  
+    </div>
+  </ion-label>  
+  <ion-ripple-effect></ion-ripple-effect>
 </ion-item>
