--- a/src/app/pages/winks/item-wink/item-wink.component.scss
+++ b/src/app/pages/winks/item-wink/item-wink.component.scss
@@ -18,6 +18,7 @@
 
 .title-wink {
   padding-left: 0%;
+  font-weight: normal;
 }
 
 .avatar-wink {
@@ -37,4 +38,8 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
+}
+
+.title-newWink {
+  font-weight: bold;
 }
