--- a/src/app/pages/winks/item-wink/item-wink.component.html
+++ b/src/app/pages/winks/item-wink/item-wink.component.html
@@ -1,5 +1,4 @@
-<ion-item (click)="GoPrivateProfileA()" class="ion-activatable ion-activatable-up">
-  <ion-ripple-effect *ngIf="wink && wink.approved"></ion-ripple-effect>
+<ion-item *ngIf="wink && !wink.approved" class="ion-activatable ion-activatable-up">
   <ion-avatar  class="avatar-wink ion-activatable ion-activatable-up" (click)="GoPrivateProfile()">
     <ion-img [src]="wink && wink.user ? wink.user.avatarUrl : avatar" class="img-avatar"></ion-img>
   </ion-avatar>
@@ -11,12 +10,42 @@
       </ion-title>
       <div *ngIf="wink" class="date-wink">
         <ion-icon name="time" color="medium"></ion-icon>
-        <ion-note class="note-wink"  color="medium">{{ wink.approved? Time(wink.updatedAt)  : Time(wink.createdAt)  }}</ion-note>
+        <ion-note class="note-wink"  color="medium">{{ Time(wink.createdAt)  }}</ion-note>
       </div>  
     </div>
-    <div *ngIf="wink && !wink.approved" class="date-wink">
+    <div  class="date-wink">
       <ion-button class="button-50 input-relative" (click)="Accept()">Wink</ion-button>
       <ion-button  class="button-ignore button-50 input-relative" color="light" (click)="Ignore()">Ignore</ion-button>
     </div>
   </ion-label>
 </ion-item>
+
+<ion-item-sliding >
+  
+  <ion-item-options side="start">
+    <ion-item-option color="danger" expandable="true" (click)="Ignore()">Delete</ion-item-option>
+  </ion-item-options>
+
+  <ion-item *ngIf="wink && wink.approved" (click)="GoPrivateProfileA()" class="ion-activatable ion-activatable-up">
+    <ion-ripple-effect ></ion-ripple-effect>
+    <ion-avatar  class="avatar-wink ion-activatable ion-activatable-up">
+      <ion-img [src]="wink && wink.user ? wink.user.avatarUrl : avatar" class="img-avatar"></ion-img>
+    </ion-avatar>
+    <ion-label class="label-item">
+      <div>
+        <ion-title class="title-wink" (click)="GoPrivateProfile()" [ngClass]="{'title-newWink': wink.user.newWink}">
+          {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
+          <ion-badge *ngIf="wink.user.newWink" class="item-win-badge">*</ion-badge>
+        </ion-title>
+        <div *ngIf="wink" class="date-wink">
+          <ion-icon name="time" color="medium"></ion-icon>
+          <ion-note class="note-wink"  color="medium">{{ Time(wink.updatedAt) }}</ion-note>
+        </div>  
+      </div>
+    </ion-label>
+  </ion-item>
+  
+  <ion-item-options side="end">
+    <ion-item-option color="danger" expandable="true" (click)="Ignore()">Delete</ion-item-option>
+  </ion-item-options>
+</ion-item-sliding>
